--- a/style/components/_button.scss
+++ b/style/components/_button.scss
@@ -6,6 +6,7 @@
     border: 0;
     border-radius: 10px;
     margin: 0 15px 30px 15px;
+    background: #fff;
 
 
     &:before{
@@ -20,7 +21,6 @@
         left: -2px;
         top: -2px;
         transform-origin: center center;
-        
     }
     
 
