change html container name and styling

--- a/style/layout/_exercise.scss
+++ b/style/layout/_exercise.scss
@@ -44,7 +44,7 @@
         }
 
         
-        &--clock-and-questions-left{
+        &--questions-left{
             flex-basis: 50%;
             text-align: center;
         }
